@@ -36,6 +36,8 @@
 ASTERISK_FILE_VERSION(__FILE__, "$Revision: 00 $")
 #include <stdio.h>
 #include <string.h>
+#include <utime.h>
+
 #include "asterisk/file.h"
 #include "asterisk/channel.h"
 #include "asterisk/module.h"
@@ -43,6 +45,8 @@ ASTERISK_FILE_VERSION(__FILE__, "$Revision: 00 $")
 #include "asterisk/app.h"
 #include "asterisk/utils.h"
 #include "asterisk/strings.h"
+
+//  return utime(fn, NULL);
 
 #ifdef AS_FLITE
 #define AST_MODULE "Flite"
@@ -55,7 +59,7 @@ ASTERISK_FILE_VERSION(__FILE__, "$Revision: 00 $")
 #define DEF_RATE 8000
 #define DEF_LANG "en-US"
 #define DEF_DIR "/tmp"
-#define DEF_VOLUME 1
+#define DEF_VOLUME 0.8
 
 
 static char *app = AST_MODULE;
@@ -67,9 +71,11 @@ static char *descrip =
 
 static int target_sample_rate;
 static int usecache;
+static int touchcache;
 static double volume;
 static const char *cachedir;
 static const char *voice_lang;
+static const char *effects;
 static struct ast_config *cfg;
 static struct ast_flags config_flags = { 0 };
 
@@ -83,6 +89,7 @@ static int read_config(const char *pico_conf)
   cachedir = DEF_DIR;
   voice_lang = DEF_LANG;
   volume = DEF_VOLUME;
+  effects = "";
 
   cfg = ast_config_load(pico_conf, config_flags);
   if (!cfg || cfg == CONFIG_STATUS_FILEINVALID)
@@ -99,8 +106,14 @@ static int read_config(const char *pico_conf)
       if ((temp = ast_variable_retrieve(cfg, "general", "cachedir")))
         cachedir = temp;
 
+      if ((temp = ast_variable_retrieve(cfg, "general", "touchcache")))
+        touchcache = ast_true(temp);
+
       if ((temp = ast_variable_retrieve(cfg, "general", "language")))
         voice_lang = temp;
+
+      if ((temp = ast_variable_retrieve(cfg, "general", "soxeffects")))
+        effects = temp;
 
       if ((temp = ast_variable_retrieve(cfg, "general", "samplerate")))
         target_sample_rate = atoi(temp);
@@ -125,18 +138,12 @@ static int picotts_text_to_wave(const char *filedata, const char *language, cons
   int res_tts = 0;
   char temp[2048];
 
-  sprintf(temp, "pico2wave -w %s -l %s '%s'", filedata, language, texttospeech);
+  snprintf(temp, sizeof(temp), "pico2wave -w %s -l %s '%s'", filedata, language, texttospeech);
 
   res_tts = system(temp);
   ast_log(LOG_WARNING, "PicoTTS: command %s, code %d.\n", temp, res_tts);
 
   return(0);
-}
-
-
-static int delete_wave(const char *filedata)
-{
-  return unlink(filedata);
 }
 
 
@@ -147,10 +154,11 @@ static int picotts_exec(struct ast_channel *chan, const char *data)
   int writecache = 0;
   char MD5_name[33] = "";
   char cachefile[MAXLEN] = "";
+  char touchfile[MAXLEN] = "";
   char tmp_name[200];
   char raw_tmp_name[200];
   char rawpico_tmp_name[200];
-  int voice;
+  char ext[6] = "";
 
 //  read_config(PICO_CONFIG);
 
@@ -195,15 +203,25 @@ static int picotts_exec(struct ast_channel *chan, const char *data)
             args.text, args.interrupt, voice_lang, target_sample_rate);
 
 
+  /* Create filenames */
+  if (target_sample_rate == 16000)
+      snprintf(ext, sizeof(ext), "sln16");
+  else
+      snprintf(ext, sizeof(ext), "sln");
+
+  snprintf(tmp_name, sizeof(tmp_name), "/tmp/picotts_%li", ast_random() % 99999999);
+  snprintf(rawpico_tmp_name, sizeof(rawpico_tmp_name), "%s.wav", tmp_name);
+  snprintf(raw_tmp_name, sizeof(raw_tmp_name), "%s.%s", tmp_name, ext);
+
   /*Cache mechanism */
   if (usecache)
     {
       ast_md5_hash(MD5_name, args.text);
-      if (strlen(cachedir) + strlen(MD5_name) + 6 <= MAXLEN)
+      if (strlen(cachedir) + strlen(MD5_name) + 8 <= MAXLEN)
         {
           ast_debug(1, "PicoTTS: Activating cache mechanism...\n");
           snprintf(cachefile, sizeof(cachefile), "%s/%s", cachedir, MD5_name);
-          if (ast_fileexists(cachefile, NULL, NULL) <= 0)
+          if (ast_fileexists(cachefile, ext, NULL) <= 0)
             {
               ast_debug(1, "PicoTTS: Cache file does not yet exist.\n");
               writecache = 1;
@@ -223,56 +241,48 @@ static int picotts_exec(struct ast_channel *chan, const char *data)
                 {
                   res = ast_waitstream(chan, args.interrupt);
                   ast_stopstream(chan);
+                  if (touchcache)
+                    {
+                      snprintf(touchfile, sizeof(touchfile), "%s.%s", cachefile, ext);
+                      if (utime(touchfile, NULL) != 0)
+                        ast_log(LOG_ERROR, "PicoTTS: could not update timestamp on  %s\n",
+                                 touchfile);
+                    }
                   return res;
                 }
             }
         }
     }
 
-  /* Create temp filenames */
-  snprintf(tmp_name, sizeof(tmp_name), "/tmp/picotts_%li", ast_random() % 99999999);
-  snprintf(rawpico_tmp_name, sizeof(rawpico_tmp_name), "%s.wav", tmp_name);
-  if (target_sample_rate == 8000)
-    snprintf(raw_tmp_name, sizeof(raw_tmp_name), "%s.sln", tmp_name);
-  if (target_sample_rate == 16000)
-    snprintf(raw_tmp_name, sizeof(raw_tmp_name), "%s.sln16", tmp_name);
 
-  /* Invoke PicoTTS */
+/* Invoke PicoTTS */
+
   if (strcmp(voice_lang, "en-US") == 0)
-    voice = 1;
+    ;
   else if (strcmp(voice_lang, "en-GB") == 0)
-    voice = 2;
+    ;
   else if (strcmp(voice_lang, "de-DE") == 0)
-    voice = 3;
+    ;
   else if (strcmp(voice_lang, "es-ES") == 0)
-    voice = 4;
+    ;
   else if (strcmp(voice_lang, "fr-FR") == 0)
-    voice = 5;
+    ;
   else if (strcmp(voice_lang, "it-IT") == 0)
-    voice = 6;
+    ;
   else
     {
       ast_log(LOG_WARNING, "PicoTTS: Unsupported voice %s. Using default voice.\n",
               voice_lang);
-      voice = 1;
       voice_lang = DEF_LANG;
     }
 
   res = picotts_text_to_wave(rawpico_tmp_name, voice_lang, args.text);
 
   char temp[1024];
-  //sprintf(temp, "sox -v 0.8 %s -r 8000 -c1 %s resample -ql", rawpico_tmp_name, raw_tmp_name);
-  sprintf(temp, "sox -v %f  %s -q -r %d -c1 -t raw %s", volume, rawpico_tmp_name, target_sample_rate, raw_tmp_name);
-  ast_log(LOG_WARNING, "PicoTTS: sox command:  %s\n", temp);
-  system(temp);
+  snprintf(temp, sizeof(temp), "sox -v %f  %s -q -r %d -c1 -t raw %s %s", volume, rawpico_tmp_name, target_sample_rate, raw_tmp_name, effects);
+  res = system(temp);
+  ast_log(LOG_WARNING, "PicoTTS: command %s, code %d.\n", temp, res);
   unlink(rawpico_tmp_name);
-
-  if (res == -1)
-    {
-      ast_log(LOG_ERROR, "PicoTTS: failed to write file %s , code %d\n", raw_tmp_name, res);
-      return res;
-    }
-
 
   if (writecache)
     {
@@ -322,4 +332,3 @@ AST_MODULE_INFO(ASTERISK_GPL_KEY, AST_MODFLAG_DEFAULT, "PicoTTS TTS Interface",
                 .unload = unload_module,
                 .reload = reload_module,
                 );
-
